--- a/Ecu911/Pages/Index.razor
+++ b/Ecu911/Pages/Index.razor
@@ -2,55 +2,63 @@
 
 
 <PageTitle>Procesos Activos</PageTitle>
-
- <MudCardContent Class="d-flex  flex-column  align-center  ">
+<MudCardContent Class="d-flex  flex-column  align-center  ">
 
     <MudText Typo="Typo.h3" GutterBottom="true">Procesos Activos</MudText>
     <MudText Class="mb-8">Tus procesos son:</MudText>
     <MudGrid>
-        <MudSimpleTable Style="overflow-x: auto;">
+        <MudSimpleTable Hover="true" Dense="true" FixedHeader="@fixedheader" Style="@(fixedheader?"height:50%;":"")">
             <thead>
                 <tr>
-                   
-                @*    <th >No. </th>*@
-                    <th >Descripcion </th>
-                    <th >Estado </th>
-                    <th >Etapa </th>
-                    <th >Proceso de Contratacion</th>
-                    <th >Mes Planificado </th>
-                    <th >Opciones </th>
+
+                    <th>% Avance </th>
+                    <th>Descripcion </th>
+                    <th>Estado </th>
+                    <th> </th>
+                    <th>Etapa </th>
+                    <th>Proceso de Contratacion</th>
+                    <th>Mes Planificado </th>
+                    <th> </th>
+                    <th>Opciones </th>
+                    <th></th>
                 </tr>
             </thead>
-          @*  <tbody>        
-                    <Virtualize Items="procesos" Context="item">
-                    <tr @key="@item.ProcesoCompraId">  
-                        
-                        <td >@item.numProceso</td>
+            <tbody>
+                <Virtualize Items="procesos" Context="item">
 
-                        <td >@item.descripcion</td>
-                        <td >@item.Estado.tipoEstado</td>
-                        <td >@item.Etapa.tipoEtapa</td>
-                        <td >@item.Procedimiento.tipoProcedimiento</td>
-                        <td >@item.mesPlanificado</td>
+                    <tr @key="@item.ProcesoCompraId">
+                        @if(item.Avance== null){
+                        <td>0</td>
+                        }
+                        else{
+                        <td>@item.Avance</td>
+                        }
+                        <td>@item.descripcion</td>
+                        <td>@item.Estado.tipoEstado</td>
+                        <th><MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled"  Color="Color.Info" OnClick="@(e => NavigateActualizarEs(@item.ProcesoCompraId))">Actualizar</MudButton></th>
+                        <td>@item.Etapa.tipoEtapa</td>
+                        <td>@item.Procedimiento.tipoProcedimiento</td>
+                        <td>@item.mesPlanificado</td>
 
 
-                        <th><MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Info" OnClick="@(e => NavigateEstados(@item.ProcesoCompraId))" >Revisar</MudButton></th>
+                        <th><MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Info" OnClick="@(e => NavigateEstados(@item.ProcesoCompraId))">Revisar</MudButton></th>
                         <th><MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Info" OnClick="@(e => NavigateObservaciones(@item.ProcesoCompraId))">Obeservaciones</MudButton></th>
                         <th><MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Info" OnClick="@(e => NavigateAlertas(@item.ProcesoCompraId))">Alertas</MudButton></th>
                     </tr>
-                  </Virtualize>
-                
-                    
-                
-            </tbody>*@
+                </Virtualize>
+
+
+
+            </tbody>
         </MudSimpleTable>
     </MudGrid>
 
 
-     </MudCardContent>
+</MudCardContent>
+
 
 @code {
-
+    bool fixedheader = true;
   private  List<ProcesoCompra> procesos = new();
 
     int id = 0;
@@ -69,10 +77,12 @@
         }
     }
 
- //   ValueTask<ItemsProviderResult<ProcesoCompra>> cargarProcesos(ItemsProviderRequest request)
- //   {
 
- //}
+ 
+    void NavigateActualizarEs(string id)
+    {
+        navManager.NavigateTo($"ActualizarProceso/{id}");
+    }
 
 
     void NavigateEstados(string id)
