--- a/Ecu911/Pages/EtapaContractual.razor
+++ b/Ecu911/Pages/EtapaContractual.razor
@@ -7,17 +7,20 @@
     <MudContainer Class="d-flex flex-column justify-center" Style="width: 40%;padding:30px">
         <MudDatePicker PickerVariant="PickerVariant.Dialog" Label="Suscripción de Contrato" @bind-Date="registro.fechaSuscripcion" DateFormat="yyyy-MM-dd"></MudDatePicker>
         </MudContainer>
+
+
     <MudContainer Class="d-flex flex-column justify-center" Style="width: 40%;padding:30px">
-        <MudSelect T="string" Label="Etapa(Actualizar deacuerdo a la fase que se encuetra)">
-            <MudSelectItem Value="@("Sin TDRS o Especificaciones Técnicas")" />
-            <MudSelectItem Value="@("Etapa Preparatoria")" />
-            <MudSelectItem Value="@("Etapa Precontractual")" />
-            <MudSelectItem Value="@("Etapa Contractual")" />
-            <MudSelectItem Value="@("Etapa Finalizado")" />
-            <MudSelectItem Value="@("Etapa Cancelado")" />
+        <MudDatePicker PickerVariant="PickerVariant.Dialog" Label="Finalización del Contrato" @bind-Date="registro.fechaFinalizacion" DateFormat="yyyy-MM-dd"></MudDatePicker>
+    </MudContainer>
+
+    <MudContainer Class="d-flex flex-column justify-center" Style="width: 40%;padding:30px">
+        <MudSelect T="string" Placeholder="Selecciona Etapa" @bind-Value="updateproceso.EtapaId" Label="Etapa" AnchorOrigin="Origin.BottomCenter" OnOpen="BuscarEtapa">
+            @foreach (var valor in etapa)
+            {
+
+                <MudSelectItem Value="@valor.EtapaId"> @valor.tipoEtapa </MudSelectItem>
+            }
         </MudSelect>
-
-
     </MudContainer>
            
 </EditForm>
@@ -31,12 +34,32 @@
 
 
 @code {
-
+    ProcesoCompra updateproceso = new();
+    List<Etapa> etapa = new();
     Contractual registro = new();
     private bool _procesando = false;
     [Parameter]
     public string Id { get; set; }
 
+    protected override async Task OnInitializedAsync()
+    {
+        await BuscarEtapa();
+    }
+    private async Task BuscarEtapa()
+    {
+        var response = await apiService.HttpClient.GetAsync("/api/Etapa");
+        try
+        {
+            response.EnsureSuccessStatusCode();
+            etapa = await response.Content.ReadFromJsonAsync<List<Etapa>>();
+
+        }
+        catch (HttpRequestException)
+        {
+            var data = await response.Content.ReadFromJsonAsync<ResponseModel>();
+            snackBar.Add($"{data.Message}", severity: Severity.Error);
+        }
+    }
     protected async void Subir()
     {
         HttpResponseMessage? response = new();
